--- a/site/config.toml
+++ b/site/config.toml
@@ -120,11 +120,11 @@ github_repo = "https://github.com/kubernetes-sigs/prow"
 github_project_repo = "https://github.com/kubernetes/test-infra"
 
 # Specify a value here if your content directory is not in your repo's root directory
-# github_subdir = ""
+github_subdir = "site"
 
 # Uncomment this if you have a newer GitHub repo with "main" as the default branch,
 # or specify a new value if you want to reference another branch in your GitHub links
-# github_branch= "main"
+github_branch= "main"
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
 #gcs_engine_id = "d72aa9b2712488cc3"
