add broken link checker
Unfortunately we cannot use the much prettier-looking
https://github.com/tcort/markdown-link-check tool because it cannot
handle relative links to other Markdown files. For some related
discussion, see https://github.com/tcort/markdown-link-check/issues/215.

So instead we just use [htmltest](https://github.com/wjdp/htmltest).
This isn't included in CI yet because we're using it to locally check
for broken links as part of the update of the "Legacy Snapshot" folder.
Later when things stabilize, we can consider adding this to CI (although
adding it CI might be not a great idea because of expected flakiness,
unless we add additional instrumentation around this).

--- a/site/Makefile
+++ b/site/Makefile
@@ -22,6 +22,9 @@ update-theme: init-theme
 	git submodule update --remote
 	npm update
 
+check-broken-links:
+	find ./public -name "*.html" -print0 | sort -z | xargs -0 ./check-broken-links.sh
+
 .PHONY: \
 	init-theme \
 	update-theme
