fix build breakage
This fixes the apparently same error described in
https://github.com/google/docsy/issues/1273.

Error trace:

    2:58:16 PM: ERROR 2022/10/28 21:58:16 render of "page" failed: execute of template failed: template: docs/single.html:30:7: executing "docs/single.html" at <partial "scripts.html" .>: error calling partial: "/opt/build/repo/site/themes/docsy/layouts/partials/scripts.html:67:107": execute of template failed: template: partials/scripts.html:67:107: executing "partials/scripts.html" at <resources.Concat>: error calling Concat: slice []interface {} not supported in concat
    2:58:16 PM: ERROR 2022/10/28 21:58:16 render of "page" failed: execute of template failed: template: docs/single.html:30:7: executing "docs/single.html" at <partial "scripts.html" .>: error calling partial: "/opt/build/repo/site/themes/docsy/layouts/partials/scripts.html:67:107": execute of template failed: template: partials/scripts.html:67:107: executing "partials/scripts.html" at <resources.Concat>: error calling Concat: slice []interface {} not supported in concat
    2:58:16 PM: ERROR 2022/10/28 21:58:16 render of "page" failed: execute of template failed: template: docs/single.html:30:7: executing "docs/single.html" at <partial "scripts.html" .>: error calling partial: "/opt/build/repo/site/themes/docsy/layouts/partials/scripts.html:67:107": execute of template failed: template: partials/scripts.html:67:107: executing "partials/scripts.html" at <resources.Concat>: error calling Concat: slice []interface {} not supported in concat
    2:58:16 PM: ERROR 2022/10/28 21:58:16 render of "page" failed: execute of template failed: template: docs/single.html:30:7: executing "docs/single.html" at <partial "scripts.html" .>: error calling partial: "/opt/build/repo/site/themes/docsy/layouts/partials/scripts.html:67:107": execute of template failed: template: partials/scripts.html:67:107: executing "partials/scripts.html" at <resources.Concat>: error calling Concat: slice []

--- a/site/Makefile
+++ b/site/Makefile
@@ -11,6 +11,7 @@ build:
 netlify-build: init-theme build
 
 netlify-deploy-preview: init-theme
+	cd themes/docsy && npm install
 	hugo --enableGitInfo --buildFuture -b $(DEPLOY_PRIME_URL)
 
 # Used by Netlify to pull in the theme (plain git-clone of our main repo is not enough).
