migrate to hugo modules
The dependencies are now tracked via go.mod and go.sum. The guide at
https://www.docsy.dev/docs/updating/convert-site-to-module/ was used for
this migration.

--- a/site/Makefile
+++ b/site/Makefile
@@ -8,24 +8,10 @@ build:
 	hugo
 
 # Used by Netlify to build the site.
-netlify-build: init-theme build
+netlify-build: build
 
-netlify-deploy-preview: init-theme
-	cd themes/docsy && npm install
+netlify-deploy-preview:
 	hugo --enableGitInfo --buildFuture -b $(DEPLOY_PRIME_URL)
-
-# Used by Netlify to pull in the theme (plain git-clone of our main repo is not enough).
-init-theme:
-	git submodule update --init --recursive
-
-# Update the "docsy" Hugo theme.
-update-theme: init-theme
-	git submodule update --remote
-	npm install
 
 check-broken-links:
 	find ./public -name "*.html" -print0 | sort -z | xargs -0 ./check-broken-links.sh
-
-.PHONY: \
-	init-theme \
-	update-theme
