integration test: use default namespace explicitly (again)
This is a followup to a8ba0a892a (integration test: use default
namespace explicitly, 2023-05-08). Again, these fixes were necessitated
when running the integration tests in a GKE 1.25 environment.

--- a/prow/test/integration/config/prow/cluster/200_ingress.yaml
+++ b/prow/test/integration/config/prow/cluster/200_ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: strip-path-prefix
+  namespace: default
   annotations:
     # Rewrite path to strip the first prefix from the URL path.  E.g., if the
     # inbound traffic says it is for /fakeghserver/foo, then this rule rewrites
@@ -63,6 +64,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: no-strip-path-prefix
+  namespace: default
 spec:
   ingressClassName: "nginx"
   rules:
