spyglass: html lens should work with files of same name
The html lens uses the file name as the ID, but it can happen that you
have the same named file in multiple directories. This causes the
accordion to be opened for anything but the first file, this fixes that
by appending an index to the file name.

--- a/prow/spyglass/lenses/html/testdata/TestRenderBody_With_quotes-0.yaml
+++ b/prow/spyglass/lenses/html/testdata/TestRenderBody_With_quotes-0.yaml
@@ -8,7 +8,7 @@
     
     <tr class="initial" id="file.html-tr">
       <td colspan="2" style="border: 0px; padding: 0px;">
-        <iframe srcdoc="<div id=&quot;wrapper&quot;><body>Hello world!</body></div><script type=&quot;text/javascript&quot;>
+        <iframe srcdoc="<div id=&quot;wrapper&quot;><body>&quot;Hello world!&quot;</body></div><script type=&quot;text/javascript&quot;>
 window.addEventListener(&quot;load&quot;, function(){
     if(window.self === window.top) return; // if w.self === w.top, we are not in an iframe
     send_height_to_parent_function = function(){
@@ -21,7 +21,7 @@ window.addEventListener(&quot;load&quot;, function(){
     var config = { attributes: true, childList: true, characterData: true, subtree:true}; // PT2
     observer.observe(window.document, config);                                            // PT3
 });
-</script>" title="file.html" sandbox="allow-scripts allow-popups allow-same-origin" id="file.html" width="100%" scrolling="no"></iframe>
+</script>" title="file.html" sandbox="allow-scripts allow-popups allow-same-origin" id="file.html-0" width="100%" scrolling="no"></iframe>
       </td>
     </tr>
     
