--- a/prow/spyglass/lenses/html/testdata/TestRenderBody_With_multiple_of_same_name-1.yaml
+++ b/prow/spyglass/lenses/html/testdata/TestRenderBody_With_multiple_of_same_name-1.yaml
@@ -6,7 +6,7 @@
       <td class="mdl-data-table__cell--non-numeric expander"><i class="icon-button material-icons arrow-icon noselect">expand_less</i></td>
     </tr>
     
-    <tr class="initial" id="file.html-tr">
+    <tr class="initial" id="file.html-0-tr">
       <td colspan="2" style="border: 0px; padding: 0px;">
         <iframe srcdoc="<div id=&quot;wrapper&quot;><head><title>File 2</title><body></body></div><script type=&quot;text/javascript&quot;>
 window.addEventListener(&quot;load&quot;, function(){
