--- a/prow/test/integration/config/prow/cluster/200_ingress.yaml
+++ b/prow/test/integration/config/prow/cluster/200_ingress.yaml
@@ -37,6 +37,13 @@ spec:
             name: webhook-server
             port:
               number: 80
+      - path: /moonraker(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: moonraker
+            port:
+              number: 80
       # Fakes.
       - path: /fakeghserver(/|$)(.*)
         pathType: Prefix
