Moonraker: test for traffic burst
While the existing integration tests for Sub and Gangway test
Moonraker's ability to act as a caching service, they are rather "light"
in their tests.

Add a Moonraker-specific integration test which sends a burst of 100
concurrent requests using the same base SHA but different head SHAs.
This checks that Moonraker can respond to a sudden burst of 100
requests.

This will also test the lower-level Git operations (git v2 client) so
that we can be confident of changes in that area.

--- a/prow/test/integration/config/prow/config.yaml
+++ b/prow/test/integration/config/prow/config.yaml
@@ -66,6 +66,7 @@ in_repo_config:
    "fakegitserver.default/repo/org1/repo4": true
    "fakegitserver.default/repo/org1/repo5": true
    "fakegitserver.default/repo/some/org/gangway-test-repo-1": true
+   "fakegitserver.default/repo/moonraker-burst": true
 
 # Allowlist of Prow API clients.
 gangway:
