--- a/prow/plugins/plugin-config-documented.yaml
+++ b/prow/plugins/plugin-config-documented.yaml
@@ -67,12 +67,11 @@ branch_cleaner:
     # format:
     # ```
     # preserved_branches:
-    # <org>: ["master", "release", "release-*"]
-    # <org/repo>: ["master", "release", "release-*"]
+    # <org>: ["master", "release"]
+    # <org/repo>: ["master", "release"]
     # ```
-    # Branches in this allow map would be exempt from branch gc
-    # even if the branches are already merged into the target branch.
-    # Supports regex.
+    # branches in this allow map would be exempt from branch gc
+    # even if the branches are already merged into the target branch
     preserved_branches:
         "": null
 bugzilla:
