--- a/.prow-images.yaml
+++ b/.prow-images.yaml
@@ -40,4 +40,4 @@ images:
   - dir: cmd/external-plugins/needs-rebase
   - dir: cmd/external-plugins/cherrypicker
   - dir: cmd/external-plugins/refresh
-  - dir: ghproxy
+  - dir: cmd/ghproxy
