--- a/cmd/deck/static/spyglass/tsconfig.json
+++ b/cmd/deck/static/spyglass/tsconfig.json
@@ -1,12 +1,12 @@
 {
-  "extends": "../../../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "include": [
     "spyglass.ts",
     "common.ts",
     "lens.ts",
     "../common/common.ts",
     "../vendor.d.ts",
-    "../../../../../node_modules/moment/moment.d.ts",
-    "../../../../../node_modules/@types/gtag.js/index.d.ts"
+    "../../../../node_modules/moment/moment.d.ts",
+    "../../../../node_modules/@types/gtag.js/index.d.ts"
   ],
 }
