--- a/test/integration/config/prow/cluster/gangway_rbac.yaml
+++ b/test/integration/config/prow/cluster/gangway_rbac.yaml
@@ -18,6 +18,7 @@ rules:
       - create
       - get
       - list
+      - update
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
