nit: Add a period after 'The K8s Authors' string

--- a/site/config.toml
+++ b/site/config.toml
@@ -91,7 +91,7 @@ languageName ="English"
 section = ["HTML", "print", "RSS"]
 
 [params]
-copyright = "The Kubernetes Authors"
+copyright = "The Kubernetes Authors."
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
