Add a card-style UI

--- a/cmd/deck/static/configured-jobs/tsconfig.json
+++ b/cmd/deck/static/configured-jobs/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "../../../../tsconfig.json",
   "include": [
-    "plugin-help.ts",
+    "configured-jobs.ts",
     "../common/prettify.ts",
     "../common/common.ts",
+    //TODO: make sure the following includes are neccessary
     "../vendor.d.ts",
     "../../../../node_modules/moment/moment.d.ts",
     "../../../../node_modules/@types/gtag.js/index.d.ts",
