Add `Configured Jobs Dashboard` to `deck` (#372)
* rough initial implementation of the configured jobs dashboard

* Add a card-style UI

* cleanup of outstanding TODOs and UI polish

* add unit tests and sort

* codegen/lint fixes

* additional error handling and cleanup

* frontend cleanup and GET method checking

--- a/cmd/deck/static/configured-jobs/tsconfig.json
+++ b/cmd/deck/static/configured-jobs/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "extends": "../../../../tsconfig.json",
   "include": [
-    "plugin-help.ts",
+    "configured-jobs.ts",
     "../common/prettify.ts",
     "../common/common.ts",
     "../vendor.d.ts",
     "../../../../node_modules/moment/moment.d.ts",
     "../../../../node_modules/@types/gtag.js/index.d.ts",
-    "../api"
   ],
 }
