Address feedback suggestions

--- a/pkg/config/prow-config-documented.yaml
+++ b/pkg/config/prow-config-documented.yaml
@@ -564,7 +564,7 @@ owners_dir_denylist:
     # Repos configures a directory denylist per repo (or org).
     repos:
         "": null
-plank:
+pipeline:
     # AllowConcurrentPostsubmitJobs controls the duplicate job abort behavior for Tekton PipelineRuns.
     # When disabled (default): all duplicate jobs (presubmit and postsubmit) are aborted when a newer
     # job with the same identifier is detected.
@@ -572,6 +572,7 @@ plank:
     # even if duplicates exist.
     # This flag only affects jobs using the Tekton agent (agent: tekton-pipeline).
     allow_concurrent_postsubmit_jobs: true
+plank:
     # BuildClusterStatusFile is an optional field used to specify the blob storage location
     # to publish cluster status information.
     # e.g. gs://my-bucket/cluster-status.json
