--- a/pkg/pod-utils/decorate/testdata/TestProwJobToPod_10.yaml
+++ b/pkg/pod-utils/decorate/testdata/TestProwJobToPod_10.yaml
@@ -69,6 +69,10 @@ spec:
       value: repo-name
     - name: REPO_OWNER
       value: org-name
+    - name: SRC_BASE
+      value: else
+    - name: SRC_HOST
+      value: somewhere
     - name: ENTRYPOINT_OPTIONS
       value: '{"timeout":7200000000000,"grace_period":10000000000,"artifact_dir":"/logs/artifacts","args":["/bin/thing","some","args"],"container_name":"test","process_log":"/logs/process-log.txt","marker_file":"/logs/marker-file.txt","metadata_file":"/logs/artifacts/metadata.json"}'
     image: tester
