feat(releaseNote): Make Release Note URL configurable
Allow projects to configure a custom release note guide URL instead of the hardcoded Kubernetes community docs link.

- Add ReleaseNote.URL config field with default to existing K8s URL
- Use configured URL in bot comments directing users to a release note process
- Add test for custom URL in bot comments

Signed-off-by: Daniel Blei <36075158+DanielBlei@users.noreply.github.com>

--- a/pkg/plugins/plugin-config-documented.yaml
+++ b/pkg/plugins/plugin-config-documented.yaml
@@ -553,6 +553,10 @@ project_manager:
                           org: ' '
                           # State must be open, closed or all
                           state: ' '
+release_note:
+    # URL is the URL to the release note documentation that users should follow.
+    # Defaults to the Kubernetes community release note guide.
+    url: ' '
 repo_milestone:
     "":
         maintainers_friendly_name: ' '
